--- a/tidy_options.conf
+++ b/tidy_options.conf
@@ -1,6 +1,7 @@
 clean: yes
 drop-proprietary-attributes: yes
 drop-empty-paras: yes
+drop-font-tags: yes
 output-html: yes
 input-encoding: utf8
 output-encoding: utf8
@@ -8,3 +9,9 @@ join-classes: yes
 join-styles: yes
 show-body-only: yes
 force-output: yes
+indent: no
+
+merge-divs: yes
+merge-spans: yes
+indent-spaces: 0
+wrap: 0
